# prism

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
examples/: antibiotic_resistance.py  forensics.py  psychiatry_case.py  quick_start.py  security.py  synthesis.py
experiments/: alpha_sweep.py  cognitive_modes.py  evaluator_asymmetry.py  literature_validation.py  security_analysis.py
prism/: __init__.py  domains.py  engine.py  pss.py  token_level.py
prism/core/: __init__.py  modes.py  token_level.py
prism/evaluator/: coherence.py  prompts.py
prism/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
results/: ablation_results.csv  alpha_sweep_results.csv  evaluator_asymmetry_results.csv  literature_validation_results.csv  security_analysis_results.csv
tests/: test_engine.py  test_modes.py  test_pss.py  test_token_level.py
