[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prism-synthesis"
version = "0.1.0"
description = "Cross-domain structural synthesis engine using contrastive precision reduction"
readme = "README.md"
license = {text = "MIT"}
keywords = ["creativity", "cross-domain", "synthesis", "LLM", "science", "PSS"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "sentence-transformers>=2.0",
    "requests>=2.20",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.20"]
openai = ["openai>=1.0"]
ollama = ["ollama>=0.1"]
all = ["anthropic>=0.20", "openai>=1.0", "ollama>=0.1"]
dev = ["pytest>=7.0", "black", "ruff", "mypy"]

[project.urls]
Repository = "https://github.com/gabrielmanhaes/prism"

[tool.setuptools.packages.find]
where = ["."]
include = ["prism*"]
