[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prism-synthesis"
version = "0.1.0"
description = "Token-level contrastive generation for cognitive state modulation in language models"
readme = "README.md"
license = {text = "MIT"}
keywords = ["contrastive-decoding", "cognitive-state", "synthesis", "LLM", "PSS"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "sentence-transformers>=2.0",
    "requests>=2.20",
]

[project.optional-dependencies]
local = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
]
anthropic = ["anthropic>=0.20"]
openai = ["openai>=1.0"]
all = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "anthropic>=0.20",
    "openai>=1.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
]
dev = ["pytest>=7.0", "black", "ruff", "mypy"]

[project.urls]
Repository = "https://github.com/gabrielmanhaes/prism"

[tool.setuptools.packages.find]
where = ["."]
include = ["prism*"]
